# reflector

./: .env  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .secrets.example  1.py  BACKEND.md  BATSHIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODER_BRIEFING.md  COMPOSE_STANDALONE_TODO.md  CONDUCTOR_MIGRATION_REQUIREMENTS.md  Caddyfile  Caddyfile.example  Caddyfile.selfhosted.example  Caddyfile.standalone.example  FLOW.md  FRONTEND_TEST_RESEARCH.md  GUIDE.md  ICS_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  LLM_CHUNKING_ANALYSIS.md  NOTES.md  PERMISSIONS.md  PLAN.md  PRD.md  PRESENCE_RACE_DESIGN_DOC.md  README.md  REFACTOR_WHEREBY_FINDING.md  REPORT.md  REQUIREMENTS.md  TASK.md  TASK1.md  TASKS.md  TIMELINE.md  TODO.md  Viz-experiments.ipynb  WEBHOOK_IMPLEMENTATION.md  (+36 more)
server/: .env.example  .env.selfhosted.example  .env_template  .gitignore  CLAUDE.md  CONDUCTOR_LLM_OBSERVATIONS.md  DAILYCO_TEST.md  Dockerfile  HATCHET_LLM_OBSERVATIONS.md  README.md  REPORT_CLEANUP.md  TEST_ANALYSIS.md  asyncio_loop_analysis.md  client.py  diarization_output.jsonl  docker-compose.yml  docker_diarization_output.jsonl  dump.rdb  env.example  main.py  migration.load  migration.md  pyproject.toml  reflector.db  reflector_dataclasses.py  reprocess_transcript.py  run-server  run_jibri_tests.py  runserver.sh  server.py  stream_client.py  taskiq_migration_plan.md  test.db  test.ics  test_daily_api_recordings.py  test_diarization_complete.py  test_diarization_modal_output.jsonl  test_diarization_output.json  test_diarization_output.jsonl  test_diarization_simple.py  (+12 more)
server/contrib/jitsi/: README.md  finalize.sh  mod_event_logger.lua
server/docker/: init-hatchet-db.sql
server/docs/: API_TYPES.md  DAILY_REFLECTOR_DATA_MODEL.md  PRD_cli_multitrack_support.md  TODO.md  daily_pipeline.md  data_retention.md  platform-jitsi.md  webhook.md
server/docs/dailyco/: README.md  crawl_dailyco_docs.py
server/docs/gpu/: api-transcription.md
server/docs/video-platforms/: README.md  daily_locking_architecture.md
server/evaluate/: evaluate_transcription.py
server/evaluate/predicted_texts/: pred_sample_1.txt  pred_sample_2.txt
server/evaluate/reference_texts/: ref_sample_1.txt  ref_sample_2.txt  ref_sample_3.txt
server/gpu/modal/: README.md  r.txt  reflector_diarizer.py  reflector_llm.py  reflector_llm_zephyr.py  reflector_transcriber.py  reflector_translator.py
server/gpu/modal_deployments/: README.md  reflector_diarizer.py  reflector_llm.py  reflector_llm_zephyr.py  reflector_transcriber.py  reflector_transcriber_parakeet.py  reflector_transcriber_parakeet_v3.py  reflector_transcriber_parakeet_with_stream_support.py  reflector_translator.py  reflector_vllm_hermes3.py
server/gpu/self_hosted/: .env.example  Dockerfile  README.md  compose.yml  pyproject.toml
server/migrations/: README  env.py
server/migrations/versions/: 0194f65cd6d3_add_webhook_fields_to_rooms.py  05f8688d6895_add_action_items.py  082fa608201c_add_room_background_information.py  0925da921477_unique_room_names.py  0ab2d7ffaa16_add_long_summary_to_search_vector.py  0bc0f3ff0111_add_webvtt_field_to_transcript.py  0ce521cda2ee_remove_user_id_from_meeting_table.py  0f943fede0e0_add_workflow_run_id_to_transcript.py  0fea6d96b096_add_share_mode.py  116b2f287eab_add_full_text_search.py  125031f7cb78_participants.py  1340c04426b8_add_meeting.py  1b1e6a6fc465_add_cloud_recording_support.py  1e49625677e4_add_daily_platform_and_user_api_keys.py  1e49625677e4_add_platform_support.py  20250617140003_add_meeting_consent_table.py  20250618140000_add_audio_deleted_field_to_transcript.py  20250801180012_add_platform_support.py  20251217000000_add_skip_consent_to_room.py  20251217000000_add_skip_consent_to_room_and_meeting.py  20260219000000_add_password_hash_to_user.py  2890b5104577_add_events_column_to_meetings_table.py  2ae3db106d4e_clean_up_orphaned_room_id_references_in_.py  2b92a1b03caa_add_daily_participant_session_table_.py  2cf0b60a9d34_fix_transcript_duration_type.py  31a75043472e_add_jobs_table_for_api_processing.py  33292043ceed_add_cascade_delete_to_meeting_consent_fk.py  36cf051dd3e4_migrate_user_id_from_uid_to_id.py  (+64 more)
server/notebooks/: Viz-experiments.ipynb  incsum.ipynb
server/reflector/: app.py  asynctask.py  authentik_client.py  client.py  events.py  jibri_events.py  llm.py  metrics.py  models.py  platform_types.py  processors.py  redis_cache.py  server.py  settings.py  stream_client.py  webrtc_ports.py  whereby.py  ws_events.py  ws_manager.py  zulip.py
server/reflector-local/: 0-reflector-local.py  1-transcript-generator.py  2-agenda-transcript-diff.py  3-transcript-summarizer.py  whisper_summarizer_bart.py
server/scripts/: create_token.py  list_daily_webhooks.py  migrate_transcript_table_webvtt_column.py  migrate_user_ids.py  recreate_daily_webhook.py  setup_pipeline_dependencies.sh  test_whereby_room.py
server/tests/: conftest.py  docker-compose.test.yml  factories.py  test_attendee_parsing_bug.ics  test_attendee_parsing_bug.py  test_audio_api.py  test_auth_password.py  test_basic_rtc.py  test_calendar_event.py  test_cleanup.py  test_consent_multitrack.py  test_create_admin.py  test_dag_progress.py  test_dag_progress_decorator.py  test_dag_progress_rest.py  test_dag_zulip.py  test_daily_poll.py  test_daily_presence_deactivation.py  test_daily_recording_polling.py  test_daily_recording_requests.py  test_daily_room_presence_polling.py  test_daily_webhook.py  test_daily_webhook_participant_left.py  test_dailyco_instance_id.py  test_dailyco_webhook.py  test_direct_session_management.py  test_file_diarization_pyannote.py  test_gpu_modal_diarization.py  test_gpu_modal_transcript.py  test_gpu_modal_translation.py  test_hatchet_client.py  test_hatchet_dispatch.py  test_hatchet_payload_thinning.py  test_hatchet_progress.py  test_ics_background_tasks.py  test_ics_dedup.py  test_ics_dedup_integration.py  test_ics_sync.py  test_jibri_events.py  test_jibri_webhook.py  (+63 more)
server/utils/: config.ini  file_utils.py  format_output.py  log_utils.py  run_utils.py  secrets.ini.example  text_utils.py  viz_utils.py
(+1082 files in other folders)
